# mcmetrics

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example_gls1.py  example_gls2.py  example_gls3.py  example_ols2.py  example_wls.py
mcmetrics/: CHANGELOG.md  pyproject.toml
mcmetrics/examples/: example_gls4.py  example_gls5.py  example_gls6.py  example_ols1.py  example_ols2.py  example_ols3.py  example_wls.py
mcmetrics/src/mcmetrics/: plotting.py  results.py  typing.py
mcmetrics/src/mcmetrics/models/: __init__.py  gls.py  ols.py  wls.py
mcmetrics/src/mcmetrics/vcov/: __init__.py  robust.py
mcmetrics/tests/: test_gls.py  test_ols.py  test_pandas_inputs.py  test_weights.py
src/mcmetrics/: __init__.py  api.py  bootstrap.py  exceptions.py  linalg.py  plotting.py  results.py  typing.py  weights.py
src/mcmetrics/linalg/: __init__.py  chol.py  einsum.py  solve.py
src/mcmetrics/models/: __init__.py  fgls_white.py  gls.py  ols.py  wls.py
src/mcmetrics/sigma/: __init__.py  estimators.py  registry.py  spec.py  whiten.py
src/mcmetrics/sigma/estimators/: __init__.py  diag_resid2.py  identity.py
src/mcmetrics/vcov/: __init__.py  classic.py  gls.py  robust.py
tests/: conftest.py  test_gls.py  test_ols.py  test_pandas_inputs.py  test_sigma_registry.py  test_weights.py  test_wls.py
