[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmetrics"
version = "0.2.0"
description = "Fast batched econometrics (OLS/WLS/GLS/FGLS) for Monte Carlo simulations."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Federico Bohl" }]
keywords = ["econometrics", "monte-carlo", "ols", "gls", "fgls", "jax", "numpy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "numpy>=1.26.4",
  "torch>=2.1",
  "scipy>=1.17.0",
]

[project.optional-dependencies]
pandas = ["pandas>=3.0.0"]
plots = ["matplotlib>=3.8"]
all = ["pandas>=3.0.0", "matplotlib>=3.8"]
jax = ["jax>=0.4.20", "jaxlib>=0.4.20"]
torch = ["torch>=2.1"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/FedericoBohl/mcmetrics"
Repository = "https://github.com/FedericoBohl/mcmetrics"
Issues = "https://github.com/FedericoBohl/mcmetrics/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E741"]
